bugs squashed, finalized styling!

--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -1,10 +1,10 @@
 .movie-view {
+  position: relative;
   display: grid;
   max-width: 100vw;
-  margin: 0 auto;
+  margin: .5rem auto;
   padding: 2rem auto 5rem;
   row-gap: 1.65em;
-  background-color: hsl(200, 5%, 65%);
 }
 
 .movie-card {
