--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,17 +1,27 @@
-$bg-color: hsl(170, 20%, 80%);
+$bg-gradient: linear-gradient(hsl(170, 20%, 70%) 50%, hsl(170, 20%, 75%));
 
-.top-title {
-  background-color: hsl(170, 20%, 75%);
+.top-title, .nav-spacer {
+  background: $bg-gradient;
   color: hsl(170, 20%, 100%);
+  border-bottom: 1px solid hsl(170, 100%, 50%);
   text-shadow: 1px 2px black;
   margin: 0;
-  padding: 0 0 0.5rem 1rem;
+  padding: 0.5rem;
+  border-bottom-right-radius: 50%;
 }
 
 .nav-bar {
-  background-color: $bg-color;
+  background: $bg-gradient;
+  position: fixed;
   display: flex;
-  padding: 1rem;
+  align-items: center;
+  border-bottom: 1px solid #444;
+  z-index: 100;
+  width: 100%;
+}
+
+.nav-spacer {
+  visibility: hidden;
 }
 
 .logout-button {
